--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BookWorm</string>
+    <string name="no_earthquakes">Oops! No books listed. Make sure you are online.</string>
+    <string name="no_internet_connection">There is no internet connection.</string>
 </resources>
